# fastapiDDD1

./: .env  main.py  pyproject.toml
app/application/common/: exception.py
app/application/user/commands/: login_user.py  register_user.py
app/application/user/queries/: get_orders.py
app/domain/shared/: vo.py
app/domain/user/: entity.py  repository.py
app/infrastructure/database/: mappers.py  orm_models.py
app/infrastructure/repository/: user_impl.py
app/interface/api/: dependency.py
app/interface/api/v1/: auth_router.py  order_router.py
config/: setting.py
migrations/models/: 3_20251119163337_None.py
